# lambda-push

./: .gitattributes  README.md  pyproject.toml
src/: aws_utils.py  defaults.py  main.py  utils.py
