[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lambda-push"
version = "0.1.0"
description = "Quickly package and deploy Python files to AWS Lambda functions"
authors = [
    {name = "Harsh"}
]
requires-python = ">=3.7"
dependencies = [
    "boto3>=1.28.0",
]

[project.scripts]
lambda-push = "lambda_push.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.sources]
"src" = "lambda_push"
